Add alt text to all img. Translate to english all captions from Gallery.

--- a/eng/about.html
+++ b/eng/about.html
@@ -11,11 +11,11 @@
 <body>
     <header>
         <a href="index.html" class="header_logo">
-            <img class="logo" src="../Images/logo.jpg" alt="logo">
+            <img class="logo" src="../Images/logo.jpg" alt="Home - Comidas e Sabores da Flor">
         </a>
         <div class="header_title">
             <h1 class="title_upper">Comidas e Sabores</h1>
-            <img src="../Images/daflor.jpg" class="title_lower" alt="da flor">
+            <img src="../Images/daflor.jpg" class="title_lower" alt="Da Flor">
         </div>
         <button class="sidebar-toggle">
             <i class="fas fa-bars"></i>
@@ -30,18 +30,18 @@
             <br>
             <p>Cooking always aroused my curiosity and brought me enormous pleasure. After living in Brazil and Italy, in 2005 I came to Finland, and I had no doubts about the profession I was going to pursue. During the years of the vocational school, I kept combining the techniques I was learning with the experimentation of new recipes at home.</p>
             <div class="first_doub">
-                <img class="about_pic" src="../Images/Foto2.jpg" alt="">
+                <img class="about_pic" src="../Images/Foto2.jpg" alt="Flor happy in the kitchen">
                 <p class="doub_text">I have always seen the kitchen space as a great laboratory, where each dish is second to none and an opportunity to express my identity. Around 2016, what had just started serving family and friends, became a greater purpose, the one of providing the Brazilian community in the Finnish capital with the flavors from the homeland.</p>
             </div>
             <p>Currently, <strong>Comidas e Sabores da Flor</strong> continues to develop with each order. My clients - which I affectionately call Flor'mores - are served with the same love and dedication I serve my own family. In addition to Brazilian meals, which are my trademark, I recently started venturing into confectionary, due to the clients’ requests.</p>
             <div class="second_doub">
-                <img class="about_pic" src="../Images/Foto4.jpg" alt="">
+                <img class="about_pic" src="../Images/Foto4.jpg" alt="Cakery from Brazil">
                 <p class="doub_text">Confectionary is an aspect that I love and that I constantly educate myself about. In this area, it inspires me to know that I am the only granddaughter to follow in the footsteps of my late grandfather, who was a chef at Confeitaria Colombo, in Rio de Janeiro</p>
             </div>
             <br>
             <p>For me, cooking is synonymous of affection and, therefore, I prefer to follow my intuition than to reproduce ready-made recipes. Something that gives me pleasure is to meet the challenges launched by friends and clients. For this reason, I also experiment with Italian, Thai, Indian and Finnish cuisine.</p>
             <div class="third_doub">
-                <img class="about_pic" src="../Images/Foto3.jpg" alt="">
+                <img class="about_pic" src="../Images/Foto3.jpg" alt="Flor working hard">
                 <p class="doub_text">Today, I feel very fulfilled. I have regular Brazilian clients, as well as other nationalities, interested in the flavors of my country. I live with my husband, Italian, and my pre-teen son in Helsinki, and I would not trade that reality for anything in this world.</p>
             </div>
             <br>
@@ -50,7 +50,7 @@
         
     </div>
     <aside class="sidebar">
-        <img src="../Images/logocomplete.jpg" alt="" class="sidebar_logo">
+        <img src="../Images/logocomplete.jpg" class="sidebar_logo" alt="Logo Comidas e Sabores da Flor">
         <button class="close-btn">
             <i class="fas fa-times"></i>
         </button>
