--- a/eng/index.html
+++ b/eng/index.html
@@ -18,11 +18,11 @@
         </div>
         <header>
             <a href="index.html" class="header_logo">
-                <img class="logo" src="../Images/logo.jpg" alt="logo">
+                <img class="logo" src="../Images/logo.jpg" alt="Home - Comidas e Sabores da Flor">
             </a>
             <div class="header_title">
                 <h1 class="title_upper">Comidas e Sabores</h1>
-                <img src="../Images/daflor.jpg" class="title_lower" alt="da flor">
+                <img src="../Images/daflor.jpg" class="title_lower" alt="Da Flor">
             </div>
             <button class="sidebar-toggle">
                 <i class="fas fa-bars"></i>
@@ -39,11 +39,11 @@
         </div>
         <div class="lang_selector">
             <a href="../index.html">
-                <img src="../Images/BrazilFlag.svg" width=25 height=25 alt=""> 
+                <img src="../Images/BrazilFlag.svg" width=25 height=25 alt="Português"> 
                 <p class="language">Por</p>
             </a>
             <a href="index.html">
-                <img src="../Images/UKFlag.svg" width=25 height=25 alt=""> 
+                <img src="../Images/UKFlag.svg" width=25 height=25 alt="English"> 
                 <p class="language active">Eng</p>
             </a>
         </div>
@@ -58,7 +58,7 @@
         </div>
     </div>
     <aside class="sidebar">
-        <img src="../Images/logocomplete.jpg" loading="lazy" alt="" class="sidebar_logo">
+        <img src="../Images/logocomplete.jpg" loading="lazy" class="sidebar_logo" alt="Logo Comidas e Sabores da Flor">
         <button class="close-btn">
             <i class="fas fa-times"></i>
         </button>
@@ -284,10 +284,8 @@
             <p class="closeModal close-chef"><i class="fas fa-times"></i></p>
             <br>
             <div class="catering-info">
-                <p class="food_intro">Do you want to celebrate an event with friends without having a lot of work? The only thing you have to do is order the desired menu and the rest is up to me! I cook and serve you and your guests.</p>            
-                <div class="catering_picture">
-                    <img class="catering_pic" src="../Images/CateringPic.jpg" alt="">
-                </div>
+                <p class="food_intro">Do you want to celebrate an event with friends without having a lot of work? The only thing you have to do is order the desired menu and the rest is up to me! I cook and serve you and your guests.</p>
+                <img class="catering_picture" src="../Images/CateringPic.jpg" alt="Flor in the kitchen">
             </div>
         </div>
     </div>
