--- a/eng/reviews.html
+++ b/eng/reviews.html
@@ -11,11 +11,11 @@
 <body>
     <header>
         <a href="index.html" class="header_logo">
-            <img class="logo" src="../Images/logo.jpg" alt="logo">
+            <img class="logo" src="../Images/logo.jpg" alt="Home - Comidas e Sabores da Flor">
         </a>
         <div class="header_title">
             <h1 class="title_upper">Comidas e Sabores</h1>
-            <img src="../Images/daflor.jpg" class="title_lower" alt="da flor">
+            <img src="../Images/daflor.jpg" class="title_lower" alt="Da Flor">
         </div>
         <button class="sidebar-toggle">
             <i class="fas fa-bars"></i>
@@ -23,7 +23,7 @@
     </header>
 
     <aside class="sidebar">
-        <img src="../Images/logocomplete.jpg" loading="lazy" alt="" class="sidebar_logo">
+        <img src="../Images/logocomplete.jpg" loading="lazy" class="sidebar_logo" alt="Logo Comidas e Sabores da Flor">
         <button class="close-btn">
             <i class="fas fa-times"></i>
         </button>
@@ -47,41 +47,41 @@
     <div class="review_container">
         <div class="review_card">
             <div class="review_person">
-                <img class="review_pic" src="../Images/Cris.jpg" alt="">
+                <img class="review_pic" src="../Images/Cris.jpg" alt="Cristiana">
                 <h4 class="review_name">Cristiana</h4>
-                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt=""></img>Vantaa</p>
+                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt="Location"></img>Vantaa</p>
             </div>
             <p class="review_text">"Flor's food is a real trip to Brazil! In addition to the flavor, I also enjoy Flor's good spirit and professionalism, always concerned with responding to what was asked for. I'm a fan of the shrimp bobó, it's my favorite!"</p>    
         </div>
         <div class="review_card">
             <p class="review_text">"Flor's food is the complete experience of visiting Brazil. Excellent food and Flor's stories, and the positive energy she has. I recommend it to everyone!"</p>    
             <div class="review_person">
-                <img class="review_pic" src="../Images/Daniel.jpg" alt="">
+                <img class="review_pic" src="../Images/Daniel.jpg" alt="Daniel">
                 <h4 class="review_name">Daniel</h4>
-                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt=""></img>Helsinki</p>
+                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt="Location"></img>Helsinki</p>
             </div>
         </div>
         <div class="review_card">
             <div class="review_person">
-                <img class="review_pic" src="../Images/Shirlei.jpg" alt="">
+                <img class="review_pic" src="../Images/Shirlei.jpg" alt="Shirlei">
                 <h4 class="review_name">Shirlei</h4>
-                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt=""></img>Helsinki</p>
+                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt="Location"></img>Helsinki</p>
             </div>
             <p class="review_text">"Flor makes the best feijoada in Finland!/ For us who are far from home it offers much more than the taste of Brazil, always with her sweetness and joy that overflow with love in her food. I strongly recommend it."</p>    
         </div>
         <div class="review_card">
             <p class="review_text">"Que bom ter uma comidinha brasileira feita com tanto carinho. O mais importante é ter certeza de ser sempre bem atendida pela nossa Flor. Meu netinho agradece"</p>    
             <div class="review_person">
-                <img class="review_pic" src="../Images/AliceEsk.jpg" alt="">
+                <img class="review_pic" src="../Images/AliceEsk.jpg" alt="Alice">
                 <h4 class="review_name">Alice</h4>
-                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt=""></img>Helsinki</p>
+                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt="Location"></img>Helsinki</p>
             </div>
         </div>
         <div class="review_card">
             <div class="review_person">
-                <img class="review_pic" src="../Images/Taysa.jpg" alt="">
+                <img class="review_pic" src="../Images/Taysa.jpg" alt="Taysa">
                 <h4 class="review_name">Taysa</h4>
-                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt=""></img>Espoo</p>
+                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt="Location"></img>Espoo</p>
             </div>
             <p class="review_text">“Comidas e Sabores da Flor brought a little of Brazil's flavor to Finland. The service is wonderful, just get to know Flor a bit to be sure of that, and the delicacies are sensational. She always does her best to meet the tastes and desires of the customers. I highly recommend it!”</p>    
         </div>
@@ -92,20 +92,20 @@
         <hr class="pink_line">
         <div class="mural_container">
             <figure>
-                <img class="mural_pic" src="../Images/Carro.jpg" alt="">
+                <img class="mural_pic" src="../Images/Carro.jpg" alt="Flor in the hot dog trailer">
                 <figcaption>Brazilian hot dog stand on Hietaranta beach, summer 2020.</figcaption>
             </figure>
             <figure>
-                <img class="mural_pic" src="../Images/Mural.jpg" alt="">
-                <figcaption>Delivering a special order to the home of my client Daniel and his family.</figcaption>
+                <img class="mural_pic" src="../Images/Mural.jpg" alt="Delivering a cake to a client">
+                <figcaption>Delivering a special order to the home of my customer Daniel and his family.</figcaption>
             </figure>
             <figure>
-                <img class="mural_pic" src="../Images/BoloM.jpg" alt="">
-                <figcaption>Bolo de mêsversário do Philip</figcaption>
+                <img class="mural_pic" src="../Images/BoloM.jpg" alt="3-month birthday cake">
+                <figcaption>Philip's 3-month birthday cake</figcaption>
             </figure>
             <figure>
-                <img class="mural_pic" src="../Images/AliceClient.jpg" alt="">
-                <figcaption>Querida cliente Alice e seu netinho Philip</figcaption>
+                <img class="mural_pic" src="../Images/AliceClient.jpg" alt="Customer Alice and her grandson Philip">
+                <figcaption>Dear customer Alice and her grandson Philip</figcaption>
             </figure>   
         </div>
         <br><br> 
