--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         </div>
         <header>
             <a href="index.html" class="header_logo">
-                <img class="logo" src="Images/logo.jpg" alt="logo">
+                <img class="logo" src="Images/logo.jpg" alt="Início - Comidas e Sabores da Flor">
             </a>
             <div class="header_title">
                 <h1 class="title_upper">Comidas e Sabores</h1>
-                <img src="Images/daflor.jpg" class="title_lower" alt="da flor">
+                <img src="Images/daflor.jpg" class="title_lower" alt="Da Flor">
             </div>
             <button class="sidebar-toggle">
                 <i class="fas fa-bars"></i>
@@ -39,26 +39,26 @@
         </div>
         <div class="lang_selector">
             <a href="index.html">
-                <img src="Images/BrazilFlag.svg" width=25 height=25 alt=""> 
+                <img src="Images/BrazilFlag.svg" width=25 height=25 alt="Português"> 
                 <p class="language active">Por</p>
             </a>
             <a href="eng/index.html">
-                <img src="Images/UKFlag.svg" width=25 height=25 alt=""> 
+                <img src="Images/UKFlag.svg" width=25 height=25 alt="English"> 
                 <p class="language">Eng</p>
             </a>
         </div>
         <div class="order_info">
             <h2>Encomende Agora</h2>
             <p>Helsinque, Espoo e Vantaa</p>
-            <img src="Images/FinlandFlag.svg" alt="Finnish Flag" width="25" height="15">
+            <img src="Images/FinlandFlag.svg" width="25" height="15" alt="Bandeira Finlândia">
             <div class="contact_info">
-                <p><img class="contact_ico" src="/Images/Phone.svg" alt=""> +358 451274148</p>
-                <p><img class="contact_ico" src="/Images/Facebook.svg" alt=""><a href="https://facebook.com/elaisapaixao" target="_blank" rel="noopener"> Facebook</a></p>
+                <p><img class="contact_ico" src="/Images/Phone.svg" alt="Telefone"> +358 451274148</p>
+                <p><img class="contact_ico" src="/Images/Facebook.svg" alt="Logo Facebook"><a href="https://facebook.com/elaisapaixao" target="_blank" rel="noopener"> Facebook</a></p>
             </div>
         </div>
     </div>
     <aside class="sidebar">
-        <img src="Images/logocomplete.jpg" loading="lazy" alt="" class="sidebar_logo">
+        <img src="Images/logocomplete.jpg" loading="lazy" class="sidebar_logo" alt="Logo Comidas e Sabores da Flor">
         <button class="close-btn">
             <i class="fas fa-times"></i>
         </button>
@@ -284,10 +284,8 @@
             <p class="closeModal close-chef"><i class="fas fa-times"></i></p>
             <br>
             <div class="catering-info">
-                <p class="food_intro">Quer celebrar um evento com os amigos sem ter muito trabalho? A única coisa que tem de fazer é encomendar o menu desejado e o resto é comigo! Cozinho e sirvo a você e aos seus convidados.</p>            
-                <div class="catering_picture">
-                    <img class="catering_pic" src="Images/CateringPic.jpg" alt="">
-                </div>
+                <p class="food_intro">Quer celebrar um evento com os amigos sem ter muito trabalho? A única coisa que tem de fazer é encomendar o menu desejado e o resto é comigo! Cozinho e sirvo a você e aos seus convidados.</p>
+                <img class="catering_picture" src="Images/CateringPic.jpg" alt="Flor na Cozinha">
             </div>
         </div>
     </div>
