--- a/por/reviews.html
+++ b/por/reviews.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="header_logo">
-            <img class="logo" src="../Images/logo.jpg" alt="logo">
+        <a href="../index.html" class="header_logo">
+            <img class="logo" src="../Images/logo.jpg" alt="Início - Comidas e Sabores da Flor">
         </a>
         <div class="header_title">
             <h1 class="title_upper">Comidas e Sabores</h1>
-            <img src="../Images/daflor.jpg" class="title_lower" alt="da flor">
+            <img src="../Images/daflor.jpg" class="title_lower" alt="Da Flor">
         </div>
         <button class="sidebar-toggle">
             <i class="fas fa-bars"></i>
@@ -23,7 +23,7 @@
     </header>
 
     <aside class="sidebar">
-        <img src="../Images/logocomplete.jpg" loading="lazy" alt="" class="sidebar_logo">
+        <img src="../Images/logocomplete.jpg" loading="lazy" class="sidebar_logo" alt="Logo Comidas e Sabores da Flor">
         <button class="close-btn">
             <i class="fas fa-times"></i>
         </button>
@@ -47,41 +47,41 @@
     <div class="review_container">
         <div class="review_card">
             <div class="review_person">
-                <img class="review_pic" src="../Images/Cris.jpg" alt="">
+                <img class="review_pic" src="../Images/Cris.jpg" alt="Cristiana">
                 <h4 class="review_name">Cristiana</h4>
-                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt=""></img>Vantaa</p>
+                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt="Location"></img>Vantaa</p>
             </div>
             <p class="review_text">“A comida da Flor é uma verdadeira viagem até o Brasil! Além do sabor, gosto muito da boa disposição e do profissionalismo da Flor, sempre preocupada em corresponder ao que foi pedido. Sou fã do bobó de camarão, é o meu preferido!”</p>    
         </div>
         <div class="review_card">
             <p class="review_text">“A comida da Flor é a experiência completa de visitar o Brasil. Comida excelente, histórias da Flor, e a energia positiva que ela tem. Recomendo pra todos!”</p>    
             <div class="review_person">
-                <img class="review_pic" src="../Images/Daniel.jpg" alt="">
+                <img class="review_pic" src="../Images/Daniel.jpg" alt="Daniel">
                 <h4 class="review_name">Daniel</h4>
-                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt=""></img>Helsinki</p>
+                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt="Location"></img>Helsinki</p>
             </div>
         </div>
         <div class="review_card">
             <div class="review_person">
-                <img class="review_pic" src="../Images/Shirlei.jpg" alt="">
+                <img class="review_pic" src="../Images/Shirlei.jpg" alt="Shirlei">
                 <h4 class="review_name">Shirlei</h4>
-                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt=""></img>Helsinki</p>
+                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt="Location"></img>Helsinki</p>
             </div>
             <p class="review_text">“A Flor faz a melhor feijoada da Finlândia! Para nós que estamos longe de casa ela oferece muito mais que o sabor do Brasil, sempre com seu sorisso e alegria que transbordam amor na sua comida. Super indico.”</p>    
         </div>
         <div class="review_card">
             <p class="review_text">“Que bom ter uma comidinha brasileira feita com tanto carinho. O mais importante é ter certeza de ser sempre bem atendida pela nossa Flor. Meu netinho agradece.”</p>    
             <div class="review_person">
-                <img class="review_pic" src="../Images/AliceEsk.jpg" alt="">
+                <img class="review_pic" src="../Images/AliceEsk.jpg" alt="Alice">
                 <h4 class="review_name">Alice</h4>
-                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt=""></img>Helsinki</p>
+                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt="Location"></img>Helsinki</p>
             </div>
         </div>
         <div class="review_card">
             <div class="review_person">
-                <img class="review_pic" src="../Images/Taysa.jpg" alt="">
+                <img class="review_pic" src="../Images/Taysa.jpg" alt="Taysa">
                 <h4 class="review_name">Taysa</h4>
-                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt=""></img>Espoo</p>
+                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt="Location"></img>Espoo</p>
             </div>
             <p class="review_text">“O Comidas e Sabores da Flor trouxe um pouco do sabor do Brasil para a Finlândia. O atendimento é maravilhoso, basta conhecer um pouco a Flor para ter certeza disso, e os quitutes sensacionais. Ela faz sempre seu melhor para atender aos gostos e desejos dos clientes. Recomendo demais!”</p>    
         </div>
@@ -92,19 +92,19 @@
         <hr class="pink_line">
         <div class="mural_container">
             <figure>
-                <img class="mural_pic" src="../Images/Carro.jpg" alt="">
+                <img class="mural_pic" src="../Images/Carro.jpg" alt="Flor na banquinha de cachorro quente">
                 <figcaption>Banquinha de cachorro quente brasileiro na praia de Hietaranta, verão 2020.</figcaption>
             </figure>
             <figure>
-                <img class="mural_pic" src="../Images/Mural.jpg" alt="">
+                <img class="mural_pic" src="../Images/Mural.jpg" alt="Flor entregando bolo ce encomenda a clientes">
                 <figcaption>Entregando uma encomenda especial na casa do meu cliente Daniel e sua família.</figcaption>
             </figure>
             <figure>
-                <img class="mural_pic" src="../Images/BoloM.jpg" alt="">
+                <img class="mural_pic" src="../Images/BoloM.jpg" alt="Bolo de nêsversário">
                 <figcaption>Bolo de mêsversário do Philip.</figcaption>
             </figure>
             <figure>
-                <img class="mural_pic" src="../Images/AliceClient.jpg" alt="">
+                <img class="mural_pic" src="../Images/AliceClient.jpg" alt="A cliente Alice e o seu netinho Philip">
                 <figcaption>Querida cliente Alice e seu netinho Philip.</figcaption>
             </figure>   
         </div>
