--- a/por/about.html
+++ b/por/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem é a Flor?</title>
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
+    <link rel="icon" href="../Images/favicon.ico" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/d94587fbf0.js" crossorigin="anonymous"></script>
 </head>
 <body>
