Correct order info img path.

--- a/eng/index.html
+++ b/eng/index.html
@@ -52,8 +52,8 @@
             <p>Helsinque, Espoo & Vantaa</p>
             <img src="../Images/FinlandFlag.svg" alt="Finnish Flag" width="25" height="15">
             <div class="contact_info">
-                <p><img class="contact_ico" src="../Images/Phone.svg" alt=""> +358 451274148</p>
-                <p><img class="contact_ico" src="../Images/Facebook.svg" alt=""><a href="https://facebook.com/elaisapaixao" target="_blank" rel="noopener"> Facebook</a></p>
+                <p><img class="contact_ico" src="../Images/Phone.svg" alt=""Phone Contact> +358 451274148</p>
+                <p><img class="contact_ico" src="../Images/Facebook.svg" alt="Facebook Logo"><a href="https://facebook.com/elaisapaixao" target="_blank" rel="noopener"> Facebook</a></p>
             </div>
         </div>
     </div>
