--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <p>Helsinque, Espoo e Vantaa</p>
             <img src="Images/FinlandFlag.svg" width="25" height="15" alt="Bandeira Finlândia">
             <div class="contact_info">
-                <p><img class="contact_ico" src="/Images/Phone.svg" alt="Telefone"> +358 451274148</p>
-                <p><img class="contact_ico" src="/Images/Facebook.svg" alt="Logo Facebook"><a href="https://facebook.com/elaisapaixao" target="_blank" rel="noopener"> Facebook</a></p>
+                <p><img class="contact_ico" src="Images/Phone.svg" alt="Telefone"> +358 451274148</p>
+                <p><img class="contact_ico" src="Images/Facebook.svg" alt="Logo Facebook"><a href="https://facebook.com/elaisapaixao" target="_blank" rel="noopener"> Facebook</a></p>
             </div>
         </div>
     </div>
