Add meta descriptions to all pages.

--- a/eng/index.html
+++ b/eng/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comidas Da Flor - The best of brazilian taste in Finland!</title>
+    <meta name="description" content="In Comidas e Sabores da FLor we bring the real Brazilian flavor to the comfort of your home in the area of Helsinki, Finland.">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
     <link rel="icon" href="../Images/favicon.ico" type="image/x-icon" />
 </head>
