--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comidas Da Flor - O melhor do sabor brasileiro na Finlândia!</title>
+    <meta name="description" content="O Comidas e Sabores da Flor leva o verdadeiro sabor brasileiro até sua casa na área de Helsínque, Finlândia.">
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <link rel="icon" href="/Images/favicon.ico" type="image/x-icon" />
 </head>
