--- a/por/about.html
+++ b/por/about.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem é a Flor?</title>
+    <meta name="description" content="Cozinhar sempre me despertou a curiosidade e me trouxe um enorme prazer. Sempre vi a cozinha como um grande laboratório, onde cada prato é inigualável.">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
     <link rel="icon" href="../Images/favicon.ico" type="image/x-icon" />
 </head>
