--- a/eng/about.html
+++ b/eng/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Who is Flor?</title>
+    <meta name="description" content="Cooking always aroused my curiosity and brought me enormous pleasure. I have always seen the kitchen space as a great laboratory, where each dish is unique.">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
     <link rel="icon" href="../Images/favicon.ico" type="image/x-icon" />
 </head>
