--- a/eng/reviews.html
+++ b/eng/reviews.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testemunhos dos Clientes</title>
+    <meta name="description" content="These are some testimonials of my dear customers, whom I serve with the same love and dedication I serve my own family.">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
     <link rel="icon" href="../Images/favicon.ico" type="image/x-icon" />
 </head>
