--- a/eng/reviews.html
+++ b/eng/reviews.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testemunhos dos Clientes</title>
     <meta name="description" content="These are some testimonials of my dear customers, whom I serve with the same love and dedication I serve my own family.">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
     <link rel="icon" href="../Images/favicon.ico" type="image/x-icon" />
 </head>
