--- a/por/about.html
+++ b/por/about.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem é a Flor?</title>
     <meta name="description" content="Cozinhar sempre me despertou a curiosidade e me trouxe um enorme prazer. Sempre vi a cozinha como um grande laboratório, onde cada prato é inigualável.">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
     <link rel="icon" href="../Images/favicon.ico" type="image/x-icon" />
 </head>
