--- a/por/reviews.html
+++ b/por/reviews.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testemunhos dos Clientes</title>
-    ,<meta name="description" content="Estes são alguns dos testemunhos dos meus queridos clientes, os quais sirvo com o mesmo carinho e dedicação com que sirvo a minha prória família.">
+    <meta name="description" content="Estes são alguns dos testemunhos dos meus queridos clientes, os quais sirvo com o mesmo carinho e dedicação com que sirvo a minha prória família.">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
     <link rel="icon" href="../Images/favicon.ico" type="image/x-icon" />
 </head>
