--- a/eng/reviews.html
+++ b/eng/reviews.html
@@ -21,14 +21,14 @@
             <h1 class="title_upper">Comidas e Sabores</h1>
             <img src="../Images/daflor.jpg" class="title_lower" alt="Da Flor">
         </div>
-        <button class="sidebar-toggle">
+        <button class="sidebar-toggle" aria-label="Open Menu">
             <i class="fas fa-bars"></i>
         </button>
     </header>
 
     <aside class="sidebar">
         <img src="../Images/logocomplete.jpg" loading="lazy" class="sidebar_logo" alt="Logo Comidas e Sabores da Flor">
-        <button class="close-btn">
+        <button class="close-btn" aria-label="Close Menu">
             <i class="fas fa-times"></i>
         </button>
         <ul class="links">
