--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta http-equiv="Expires" content="0">
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <link rel="icon" href="/Images/favicon.ico" type="image/x-icon" />
+    <link rel="preload" as="style" href="CSS/styles.css">
 </head>
 <body>
     <div class="main_wrap">
