--- a/por/about.html
+++ b/por/about.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quem é a Flor?</title>
+    <title>Quem é a Flor? - A minha história de amor pela cozinha.</title>
     <meta name="description" content="Cozinhar sempre me despertou a curiosidade e me trouxe um enorme prazer. Sempre vi a cozinha como um grande laboratório, onde cada prato é inigualável.">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
-    <link rel="icon" href="../Images/favicon.ico" type="image/x-icon" />
     <link rel="preload" as="style" href="CSS/styles.css">
+    <link rel="icon" href="../Images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
     <header>
