--- a/eng/about.html
+++ b/eng/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Who is Flor? - My story of love for cooking.</title>
     <meta name="description" content="Cooking always aroused my curiosity and brought me enormous pleasure. I have always seen the kitchen space as a great laboratory, where each dish is unique.">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" max-age=31536000>
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
