--- a/eng/index.html
+++ b/eng/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comidas Da Flor - The best of brazilian taste in Finland!</title>
     <meta name="description" content="In Comidas e Sabores da FLor we bring the real Brazilian flavor to the comfort of your home in the area of Helsinki, Finland.">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" max-age=31536000>
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
