--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comidas Da Flor - O melhor do sabor brasileiro na Finlândia!</title>
     <meta name="description" content="O Comidas e Sabores da Flor leva o verdadeiro sabor brasileiro até sua casa na área de Helsínque, Finlândia.">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" max-age=31536000>
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
