--- a/por/reviews.html
+++ b/por/reviews.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testemunhos dos Clientes</title>
     <meta name="description" content="Estes são alguns dos testemunhos dos meus queridos clientes, os quais sirvo com o mesmo carinho e dedicação com que sirvo a minha prória família.">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" max-age=31536000>
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
