Organize the code.

--- a/eng/index.html
+++ b/eng/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" href="../Images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
+    <!-- Viewport with slideshow -->
     <div class="main_wrap">
         <div class="slideshow">
             <div class="slide_image" id="slide-1" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../Images/Feijoada3.jpg')"></div>
@@ -20,6 +21,7 @@
             <div class="slide_image" id="slide-3" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../Images/Bobo1.jpg')"></div>
             <div class="slide_image" id="slide-4" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../Images/RJ4.jpg')"></div>
         </div>
+        <!-- Header -->
         <header>
             <a href="index.html" class="header_logo">
                 <img class="logo" src="../Images/logo.jpg" alt="Home - Comidas e Sabores da Flor">
@@ -32,6 +34,7 @@
                 <i class="fas fa-bars"></i>
             </button>
         </header>
+        <!-- Intro -->
         <div class="intro">
             <div class="intro_box">
                 <p>Do you miss your homeland? <br>The Sunday lunch?<br>Grandma's food?</p>
@@ -41,6 +44,7 @@
                 <p>Receive the best of Brazilian flavor in the comfort of your home!</p>
             </div>
         </div>
+        <!-- Language Selector -->
         <div class="lang_selector">
             <a href="../index.html">
                 <img src="../Images/BrazilFlag.svg" width=25 height=25 alt="Português">
@@ -51,6 +55,7 @@
                 <p class="language active">Eng</p>
             </a>
         </div>
+        <!-- Order Info -->
         <div class="order_info">
             <h2>Order Now</h2>
             <p>Helsinque, Espoo & Vantaa</p>
@@ -61,6 +66,7 @@
             </div>
         </div>
     </div>
+    <!-- Sidebar Menu -->
     <aside class="sidebar">
         <img src="../Images/logocomplete.jpg" loading="lazy" class="sidebar_logo" alt="Logo Comidas e Sabores da Flor">
         <button class="close-btn" aria-label="Close Menu">
@@ -81,7 +87,7 @@
             </li>
         </ul>
     </aside>
-
+<!-- Presentation -->
     <div class="main_content">
         <h2>Our Work</h2>
         <hr class="white_line">
@@ -94,6 +100,7 @@
             <p>Welcome and see samples of our work below. Contact us by phone or Facebook to place your order and taste our dishes. We deliver in Helsinki, Espoo and Vantaa.</p>
         </div>
     </div>
+    <!-- Foods -->
     <div class="foods">
         <h2>Services</h2>
         <hr class="pink_line">
@@ -105,14 +112,14 @@
             <a id="chef_link" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('../Images/ChefCasa.jpg'); cursor: pointer;"><p class="food_cat">Chef at Home</p></a>
         </div>
     </div>
+    <!-- Footer -->
     <footer>
         <div class="footer">
             <p>&copy; 2021 Comidas & Sabores da Flor</p>
             <p>All rights reserved</p>
         </div>
     </footer>
-
-
+    <!-- Modals -->
     <div id="quentinhas" class="modal">
         <div id="quentinhas-content" class="modal-content">
             <p class="closeModal close-quen"><i class="fas fa-times"></i></p>
@@ -293,7 +300,7 @@
             </div>
         </div>
     </div>
-
+    <!-- Scripts -->
     <script src="https://kit.fontawesome.com/d94587fbf0.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="../JS/script.js"></script>
