--- a/eng/reviews.html
+++ b/eng/reviews.html
@@ -13,6 +13,7 @@
     <link rel="icon" href="../Images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
+    <!-- Header -->
     <header>
         <a href="index.html" class="header_logo">
             <img class="logo" src="../Images/logo.jpg" alt="Home - Comidas e Sabores da Flor">
@@ -25,7 +26,7 @@
             <i class="fas fa-bars"></i>
         </button>
     </header>
-
+    <!-- Sidebar Menu -->
     <aside class="sidebar">
         <img src="../Images/logocomplete.jpg" loading="lazy" class="sidebar_logo" alt="Logo Comidas e Sabores da Flor">
         <button class="close-btn" aria-label="Close Menu">
@@ -46,6 +47,7 @@
             </li>
         </ul>
     </aside>
+    <!-- Testimonials -->
     <h2 class="reviews_title">Reviews</h2>
     <hr class="white_line">
     <div class="review_container">
@@ -90,7 +92,7 @@
             <p class="review_text">“Comidas e Sabores da Flor brought a little of Brazil's flavor to Finland. The service is wonderful, just get to know Flor a bit to be sure of that, and the delicacies are sensational. She always does her best to meet the tastes and desires of the customers. I highly recommend it!”</p>    
         </div>
     </div>
-
+    <!-- Gallery -->
     <div class="mural">
         <h2>Gallery</h2>
         <hr class="pink_line">
@@ -114,15 +116,14 @@
         </div>
         <br><br> 
     </div>
-    
-
+    <!-- Footer -->
     <footer>
         <div class="footer">
             <p>&copy; 2021 Comidas & Sabores da Flor</p>
             <p>All rights reserved</p>
         </div>
     </footer>
-    
+    <!-- Scripts -->
     <script src="https://kit.fontawesome.com/d94587fbf0.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="../JS/script.js"></script>
