--- a/eng/reviews.html
+++ b/eng/reviews.html
@@ -73,7 +73,7 @@
                 <h4 class="review_name">Shirlei</h4>
                 <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt="Location"></img>Helsinki</p>
             </div>
-            <p class="review_text">"Flor makes the best feijoada in Finland!/ For us who are far from home it offers much more than the taste of Brazil, always with her sweetness and joy that overflow with love in her food. I strongly recommend it."</p>    
+            <p class="review_text">"Flor makes the best feijoada in Finland! For us who are far from home it offers much more than the taste of Brazil, always with her sweetness and joy that overflow with love in her food. I strongly recommend it."</p>    
         </div>
         <div class="review_card">
             <p class="review_text">"Que bom ter uma comidinha brasileira feita com tanto carinho. O mais importante é ter certeza de ser sempre bem atendida pela nossa Flor. Meu netinho agradece"</p>    
@@ -107,7 +107,7 @@
             </figure>
             <figure>
                 <img class="mural_pic" src="../Images/BoloM.jpg" alt="3-month birthday cake">
-                <figcaption>Philip's 3-month birthday cake</figcaption>
+                <figcaption>Philip's 4-month birthday cake</figcaption>
             </figure>
             <figure>
                 <img class="mural_pic" src="../Images/AliceClient.jpg" alt="Customer Alice and her grandson Philip">
