--- a/por/reviews.html
+++ b/por/reviews.html
@@ -91,6 +91,36 @@
             </div>
             <p class="review_text">“O Comidas e Sabores da Flor trouxe um pouco do sabor do Brasil para a Finlândia. O atendimento é maravilhoso, basta conhecer um pouco a Flor para ter certeza disso, e os quitutes sensacionais. Ela faz sempre seu melhor para atender aos gostos e desejos dos clientes. Recomendo demais!”</p>    
         </div>
+        <div class="review_card">
+            <p class="review_text">“A minha experiência com a Flor foi ótima. Ela é aquele tipo de pessoa que você pode dar feedback que ela te ouve, super atenciosa e prestativa. As comidas são deliciosas, fazem a gente matar um pouco da saudade da comida brasileira. Eu simplesmente amei a feijoada. Você pode pedir de doces a comidas caseiras que tudo é gostoso.”</p>
+            <div class="review_person">
+                <img class="review_pic" src="../Images/Duda.jpg" alt="Taysa">
+                <h4 class="review_name">Duda</h4>
+                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt="Location"></img>Espoo</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="form_container">
+        <form action="../sendReview.php" method="POST" name="review_form" enctype="multipart/form-data">
+            <div class="form_group">
+                <label for="name">Nome:</label><br>
+                <input type="text" id="name" name="name" class="form_field">
+            </div>
+            <div class="form_group">
+                <label for="location">Localidade:</label><br>
+                <input type="text" id="location" name="location" class="form_field">
+            </div>
+            <div class="form_group">
+                <label for="photo">Adicione a sua foto:</label><br>
+                <input type="file" id="photo" accept="image/*" name="photo" class="form_field">
+            </div>
+            <div class="form_group">
+                <label for="message">Mensagem:</label><br>
+                <textarea name="message" id="message" cols="40" rows="10" class="form_field"></textarea>
+            </div>
+            <button type="submit" class="form_button">SEND MESSAGE</button>
+        </form>
     </div>
     <!-- Gallery -->
     <div class="mural">
