Delete php form for now.

--- a/por/reviews.html
+++ b/por/reviews.html
@@ -100,8 +100,7 @@
             </div>
         </div>
     </div>
-
-    <div class="form_container">
+    <!-- <div class="form_container">
         <form action="../sendReview.php" method="POST" name="review_form" enctype="multipart/form-data">
             <div class="form_group">
                 <label for="name">Nome:</label><br>
@@ -111,17 +110,17 @@
                 <label for="location">Localidade:</label><br>
                 <input type="text" id="location" name="location" class="form_field">
             </div>
-            <!-- <div class="form_group">
+            <div class="form_group">
                 <label for="photo">Adicione a sua foto:</label><br>
                 <input type="file" id="photo" accept="image/*" name="photo" class="form_field">
-            </div> -->
+            </div>
             <div class="form_group">
                 <label for="message">Mensagem:</label><br>
                 <textarea name="message" id="message" cols="40" rows="10" class="form_field"></textarea>
             </div>
             <button type="submit" class="form_button">SEND MESSAGE</button>
         </form>
-    </div>
+    </div> -->
     <!-- Gallery -->
     <div class="mural">
         <h2>Mural</h2>
